--- a/styles.css
+++ b/styles.css
@@ -16,3 +16,13 @@ body {
     margin: 0;
     padding: 0;
 }
+
+.principal {
+   background-image: url(./assets/Background.png);
+   background-repeat: no-repeat;
+    background-size: contain;
+}   
+
+.container {
+    height: 100vh;
+}   
