--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,10 +23,11 @@ body {
 }
 
 .principal {
-    background-image: url(./assets/Background.png);
-    background-position: center;
+    background-image: url(../assets/Background.png);
     background-repeat: no-repeat;
     background-size: contain;
+    align-items: center;
+    text-align: center;
 }   
 
 .container {
@@ -42,6 +43,7 @@ body {
     color: var(--branco-principal);
     display: block;
     text-decoration: none;
+    margin-bottom: 1em;
 }
 
 .botao_secundario {
@@ -58,4 +60,13 @@ body {
 .container__titulo {
     font-size: 28px;
     font-weight: 700;
+}
+
+.container__imagem {
+    margin: 1em 0 2em 0;
+    
+}
+
+.container__caixa {
+    margin: 0 6em;
 }
