--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,8 +4,6 @@
     --botao-azul: #167BF7;  
     --cor-de-fundo: #00030c;
     --fonte-principal: 'Inter';
-
-    
 }
 
 body {
@@ -13,8 +11,7 @@ body {
     color: var(--branco-principal);
     font-family: var(--fonte-principal);
     font-size: 16px;
-    font-weight: 400;
-   
+    font-weight: 400;   
 }
 
 * {
@@ -53,8 +50,7 @@ body {
 
 .container__aviso {
     font-size: 12px;
-    color: var(--cinza-secundario);
-    
+    color: var(--cinza-secundario);   
 }
 
 .container__titulo {
@@ -63,10 +59,31 @@ body {
 }
 
 .container__imagem {
-    margin: 1em 0 2em 0;
-    
+    margin: 1em 0 2em 0;   
 }
 
 .container__caixa {
     margin: 0 6em;
+}
+
+.secundario__img {
+    width: 40%;
+    margin-right: 10em;
+}   
+
+.secundario {
+    display: flex;
+    align-items: center;
+    margin: 0 10em;
+}
+
+.descricao__titulo {
+    font-size: 48px;
+    font-weight: 700;
+    margin-bottom: 0.1em; 
+}
+
+.descricao__texto {
+    font-size: 20px;
+    color: var(--cinza-secundario);
 }
