--- a/styles/styles.css
+++ b/styles/styles.css
@@ -87,3 +87,79 @@ body {
     font-size: 20px;
     color: var(--cinza-secundario);
 }
+
+.terceiro {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 10em;
+}
+
+.terceiro__img {
+    width: 40%;
+    margin-left: 10em;
+}
+
+.secundario__botao {
+    display: inline-block;
+    margin-top: 1em;
+}
+
+.quarto {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 10em;
+}
+
+.quarto__img {
+    width: 40%;
+    margin-right: 10em;
+}
+
+.dispositivos__lista {
+   display: flex;
+   justify-content: center;
+   list-style-type: none;
+   margin: 5em 0;
+}
+
+.dispositivos {
+    text-align: center;
+}
+
+.dispositivos__titulo {
+    font-size: 48px;
+    color: var(--branco-principal);
+}
+
+.lista__item {
+    font-size: 32px;
+    color: var(--branco-principal);
+    
+}
+
+.footer {
+   text-align: center;
+   margin-bottom: 1em;
+}
+
+.footer__lista  {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin: 2em 2em;
+    gap: 2em;
+}
+
+.lista__link a {
+    text-decoration: none;
+    color: var(--branco-principal); 
+    font-size: 14px;
+
+}
+
+.footer__texto {
+    font-size: 12px;
+    color: var(--cinza-secundario);
+}
